--- a/src/main/webapp/app/common/primary/homepage/Homepage.css
+++ b/src/main/webapp/app/common/primary/homepage/Homepage.css
@@ -1,10 +1,10 @@
-#app {
+#Homepage {
   font-family: Avenir, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   display: flex;
   flex-direction: column;
-  justify-content:center;
+  justify-content: center;
   align-items: center;
 
   text-align: center;
@@ -12,7 +12,7 @@
   margin-top: 60px;
 }
 a {
-  color: #045F77;
+  color: #045f77;
 }
 
 label {
